<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Concept Card</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="Buttonbackground">#FFFFFF</color>
    <color name="Blue">#0000FF</color>
    <color name="background">#104E8B</color>

    <string name="Value">Value</string>
    <string name="CardNum">Card Number</string>
    <string name="SNLC">Start New Loyaltycard</string>
    <string name="IGC">Issue Gift Card</string>
    <string name="APTLC">Add Points To Loyalty Card</string>
    <string name="swipe">TO BEGIN, SWIPE CARD</string>
    <string name="Header">Loyalty and Gift Card terminal By conceptcard</string>
    <string name="RGC">Redeem Gift Card</string>
    <string name="findCard">FIND CARD</string>
    <string name="cancelCard">Cancel CARD</string>
    <string name="checkData">Check DATA</string>
    <string name="backupData">BackupDATA</string>
    <string name="goBack">GO BACK</string>
    <string name="concept">concept</string>
    <string name="card">card</string>
    <string name="keyIn">Key-in Gift Card Value and save:</string>
    <string name="save">Save</string>
    <string name="retrn">Return</string>
    <string name="swipetoverify">SWIPE CARD TO VERIFY VALUE</string>
    <string name="checkCardNumber">Check that number matches card number and press return</string>
    <string name="GCN">Gift card number</string>
    <string name="AmtSpend">Amount to spend</string>
    <string name="print">PRINT</string>
    <string name="close">CLOSE</string>
    <string name="info">Concept Card 01363-777567</string>
    <string name="LCAP">Loyalty Card(Add Points)</string>
    <string name="lcNum">Loyalty card number:</string>
    <string name="amtofSpend">Amount of spend:</string>
    <string name="ptsAllocated">Points allocated:</string>
    <string name="totalpts">Total points:</string>
    <string name="addpts">ADD POINTS</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="address">Address:</string>
    <string name="keyintoredeempts">To Redeem Points, key-in amount spent and press return</string>
    <string name="keyintoredeemgift">To Redeem Giftcard, key-in amount spent and press return</string>
    <string name="spend">Spend</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="title_activity_redeemgift">Redeemgift</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    
    
    
    
    
    <string name="description_logo">Demo</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    <string name="description_feature5">Feature 5</string>
    <string name="description_feature6">Feature 6</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">Feature 1</string>
    <string name="title_feature2">Feature 2</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>

    <string name="default_intro">This is the default content view for an activity. Be sure to change your activity\'s onCreate method. Use setContentView on a custom layout.</string>
    <string name="feature1_intro">Feature 1 content goes here.</string>
    <string name="feature2_intro">Feature 2 content goes here.</string>
    <string name="feature3_intro">Feature 3 content goes here.</string>
    <string name="feature4_intro">Feature 4 content goes here.</string>
    <string name="feature5_intro">Feature 5 content goes here.</string>
    <string name="feature6_intro">Feature 6 content goes here.</string>

    <string name="about_intro">This app is a demo to show you how to do an Android app based on the Dashboard pattern that has been used in apps like Twitter, Google IO, and Evernote.</string>
    <string name="search_intro">Content for the Search page goes here.</string>

</resources>
