<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/Header"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/bStartNewLoyaltyCard"
        android:layout_width="125dp"
        android:layout_height="90dp"
        android:layout_below="@+id/tvHeader"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_back"
        android:text="@string/SNLC"
        android:textColor="@color/background"
        android:textSize="14sp" />

  <!--   <Button
        android:id="@+id/bFindCard"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bIssueGiftCard"
        android:layout_marginTop="45dp"
        android:text="@string/findCard"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bCancelCard"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bFindCard"
        android:layout_alignBottom="@+id/bFindCard"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/bFindCard"
        android:text="@string/cancelCard"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bCheckData"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bCancelCard"
        android:layout_alignBottom="@+id/bCancelCard"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/bCancelCard"
        android:text="@string/checkData"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bBackupData"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bCheckData"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/bCheckData"
        android:text="@string/backupData"
        android:textSize="14sp" /> -->

    <Button
        android:id="@+id/bRedeemGiftCard"
        android:layout_width="125dp"
        android:layout_height="90dp"
        android:layout_alignLeft="@+id/bAddPointsToLoyaltyCard"
        android:layout_alignTop="@+id/bIssueGiftCard"
        android:background="@drawable/button_back"
        android:text="@string/RGC"
        android:textColor="@color/background"
        android:textSize="14sp" />

     <Button
         android:id="@+id/bAddPointsToLoyaltyCard"
         android:layout_width="125dp"
         android:layout_height="90dp"
         android:layout_alignBaseline="@+id/bStartNewLoyaltyCard"
         android:layout_alignBottom="@+id/bStartNewLoyaltyCard"
         android:layout_alignRight="@+id/tvHeader"
         android:background="@drawable/button_back"
         android:text="@string/APTLC"
         android:textColor="@color/background"
         android:textSize="14sp" />

     <Button
         android:id="@+id/bRedeemloyaltyCard"
         android:layout_width="125dp"
         android:layout_height="90dp"
         android:layout_alignLeft="@+id/bStartNewLoyaltyCard"
         android:layout_below="@+id/bStartNewLoyaltyCard"
         android:background="@drawable/button_back"
         android:text="Redeem Point from Loyalty Card"
         android:textColor="@color/background"
         android:textSize="14sp" />

     <Button
         android:id="@+id/bIssueGiftCard"
         android:layout_width="125dp"
         android:layout_height="90dp"
         android:layout_alignLeft="@+id/bRedeemloyaltyCard"
         android:layout_below="@+id/bRedeemloyaltyCard"
         android:background="@drawable/button_back"
         android:text="@string/IGC"
         android:textColor="@color/background"
         android:textSize="14sp" />
     <Button 
         android:id = "@+id/demo"
         android:text = "demo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
</RelativeLayout>